[project]
name = "sam-flet"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

# 検査対象と除外
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "migrations"
]

[tool.ruff.lint]
#select = ["E", "F", "W", "B", "I"]
#select = ["ALL"]
#ignore = [
#    "D1", # undocumented
#    "D203", # one blank line before class
#    "D213", # multi-line summary second line
#    "TD001", # invalid todo tag
#    "TD002", # missing todo author
#    "TD003", # missing todo link
#    "PD011", # pandas use of dot values
#]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N", # pep8-naming
    "W", # pycodestyle warnings
    "RUF", # Ruff-specific rules
    "D", # pydocstyle
    "PT", # pytest style
    "SIM", # flake8-simplify
    "TCH", # type-checking imports
    "TID", # tidy imports
    "ERA"   # eradicate
]

# 特定の警告を無視
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line

    "D103",
]

# 厳格な設定
extend-select = ["ALL"]

fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.pyupgrade]
# Python 3.13の新しい構文を推奨
keep-runtime-typing = true

# importの整理設定
[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-between-types = 1
relative-imports-order = "closest-to-furthest"
known-first-party = []

# フォーマット設定
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]
